# PyTabular

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  adomd_client_implementation_patterns.md  dll_cleanup_summary.md  index.html  project_structure_analysis.md  pyproject.toml  sitemap.xml
.cursor/rules/: project.mdc
.github/workflows/: ci.yml
CONTRIBUTING/: index.html
PyColumn/: index.html
PyColumns/: index.html
PyMeasure/: index.html
PyMeasures/: index.html
PyObject/: index.html
PyObjects/: index.html
PyPartition/: index.html
PyPartitions/: index.html
PyTable/: index.html
PyTables/: index.html
Tabular/: index.html
best_practice_analyzer/: index.html
document/: index.html
logic_utils/: index.html
pbi_helper/: index.html
pytabular/: __init__.py  pytabular.py  query.py
query/: index.html
refresh/: index.html
script/: README.md  update_adomo_linux.py
search/: search_index.json
tabular_editor/: index.html
tabular_tracing/: index.html
test/: test_1sanity.py
tmdl/: index.html
